# mcumgr-toolkit

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codecov.yml  python-docs.yml  python.yml
mcumgr-toolkit/: Cargo.toml
mcumgr-toolkit-cli/: Cargo.toml
mcumgr-toolkit-cli/src/: args.rs  client.rs  errors.rs  main.rs
mcumgr-toolkit-cli/src/groups/: firmware.rs  image.rs  mod.rs  os.rs  raw.rs
mcumgr-toolkit-python/: Cargo.toml  README.md  pyproject.toml
mcumgr-toolkit-python/src/: errors.rs  lib.rs  mcuboot.rs  raw_py_any_command.rs  return_types.rs
mcumgr-toolkit/src/: client.rs  connection.rs  lib.rs  smp_errors.rs
mcumgr-toolkit/src/client/: firmware_update.rs
mcumgr-toolkit/src/mcuboot/image/: mod.rs
mcumgr-toolkit/src/transport/: mod.rs  serial.rs
mcumgr-toolkit/tests/: integration_tests.rs  transport_serial_tests.rs
mcumgr-toolkit/tests/common/: mod.rs
zephyr-mcumgr/: Cargo.toml
zephyr-mcumgr-cli/: Cargo.toml
zephyr-mcumgr-cli/src/: args.rs  errors.rs  file_read_write.rs  formatting.rs  main.rs  progress.rs  raw_command.rs
zephyr-mcumgr-cli/src/groups/: firmware.rs  image.rs  mcuboot.rs  raw.rs
zephyr-mcumgr-python/: Cargo.toml  README.md  pyproject.toml  zephyr_mcumgr.pyi
zephyr-mcumgr-python/src/: errors.rs  lib.rs  mcuboot.rs  repr_macro.rs  return_types.rs
zephyr-mcumgr/src/: bootloader.rs  client.rs  connection.rs  errno.rs  errors.rs  lib.rs  smp_errors.rs
zephyr-mcumgr/src/client/: firmware_update.rs
zephyr-mcumgr/src/commands/: fs.rs  image.rs  macros.rs  mod.rs  os.rs
zephyr-mcumgr/src/firmware_update/: mod.rs
zephyr-mcumgr/src/mcuboot/image/: mod.rs
zephyr-mcumgr/src/transport/: mod.rs  serial.rs
zephyr-mcumgr/tests/: integration_tests.rs
zephyr-mcumgr/tests/common/: mod.rs
