[package]
name = "zephyr-mcumgr-cli"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serialport = { workspace = true, features = ["usbportinfo-interface"] }
